apps/base/audiobookshelf/deployment.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: audiobookshelf
  labels:
    app.kubernetes.io/component: monitoring
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: audiobookshelf
spec:
  replicas: 1
  selector:
    matchLabels:
      app: audiobookshelf
  template:
    metadata:
      labels:
        app: audiobookshelf
    spec:
      # securityContext:
      #   fsGroup: 33
      #   runAsUser: 33
      #   runAsGroup: 33
      containers:
        - name: audiobookshelf
          image: advplyr/audiobookshelf:latest
          ports:
            - containerPort: 13378
